Bug 1627097 - Profiler synchronously collect processor information - r=emalysz

Differential Revision: https://phabricator.services.mozilla.com/D69922